src/examples/invalid/static/invalid-return.ra
func test(): string {
  return false;
}

func main(): void {
  a = test();
  print(a);
}
